publish: fix number being cut off at top - right side
generated from commit ae7dd5d1fc845a8409d8ba234e825b502eb3ca69

--- a/tour.css
+++ b/tour.css
@@ -73,3 +73,8 @@
     top: initial;
     bottom: -16px;
 }
+
+.introjs-helperLayer.right .introjs-helperNumberLayer {
+    left: initial;
+    right: -16px;
+}
